exports[`test Renders <Flexbox /> component with layout helpers (height, width, margin, padding, etc) 1`] = `
<div
  style={
    Object {
      "display": Array [
        "-webkit-box",
        "-moz-box",
        "-ms-flexbox",
        "-webkit-flex",
        "flex",
      ],
      "height": "100%",
      "margin": "66px 33px",
      "marginRight": "25px",
      "maxWidth": "100vw",
      "minHeight": "100vh",
      "padding": "99px",
      "paddingLeft": "50px",
      "width": "100px",
    }
  } />
`;

exports[`test Renders <Flexbox /> component with several flexbox props 1`] = `
<div
  alignitems="center"
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxLines": "multiple",
      "WebkitBoxOrient": "vertical",
      "WebkitBoxPack": "center",
      "WebkitFlexDirection": "column",
      "WebkitFlexGrow": 1,
      "WebkitFlexWrap": "wrap",
      "WebkitJustifyContent": "center",
      "display": Array [
        "-webkit-box",
        "-moz-box",
        "-ms-flexbox",
        "-webkit-flex",
        "flex",
      ],
      "flexDirection": "column",
      "flexGrow": 1,
      "flexWrap": "wrap",
      "justifyContent": "center",
      "msFlexDirection": "column",
      "msFlexPack": "center",
      "msFlexPositive": 1,
      "msFlexWrap": "wrap",
    }
  } />
`;

exports[`test Renders <Flexbox /> with extra props, outside expected/defined ones (like event handlers or className) 1`] = `
<div
  className="test-class"
  id="test-id"
  onClick={[Function]}
  style={
    Object {
      "display": Array [
        "-webkit-box",
        "-moz-box",
        "-ms-flexbox",
        "-webkit-flex",
        "flex",
      ],
    }
  } />
`;

exports[`test Renders <Flexbox /> with inline styles that can overwrite flexbox-react related props too 1`] = `
<div
  style={
    Object {
      "backgroundColor": "red",
      "display": "block",
    }
  } />
`;

exports[`test Renders custom element (header) <Flexbox /> component 1`] = `
<header
  style={
    Object {
      "display": Array [
        "-webkit-box",
        "-moz-box",
        "-ms-flexbox",
        "-webkit-flex",
        "flex",
      ],
    }
  } />
`;

exports[`test Renders minimal <Flexbox /> component 1`] = `
<div
  style={
    Object {
      "display": Array [
        "-webkit-box",
        "-moz-box",
        "-ms-flexbox",
        "-webkit-flex",
        "flex",
      ],
    }
  } />
`;
